Update bibtex, Update Excel, Update readme

--- a/AutonomousRacing_Literature.bib
+++ b/AutonomousRacing_Literature.bib
@@ -94,6 +94,13 @@
   booktitle = {2020 {IEEE} 16th International Conference on Automation Science and Engineering ({CASE})}
 }
 
+@misc{Bak2021,
+Author = {Stanley Bak and Johannes Betz and Abhinav Chawla and Hongrui Zheng and Rahul Mangharam},
+Title = {Stress Testing Autonomous Racing Overtake Maneuvers with RRT},
+Year = {2021},
+Eprint = {arXiv:2110.01095},
+}
+
 @misc{balaji2019,
       title={DeepRacer: Educational Autonomous Racing Platform for Experimentation with Sim2Real Reinforcement Learning},
       author={Bharathan Balaji and Sunil Mallya and Sahika Genc and Saurabh Gupta and Leo Dirac and Vineet Khare and Gourav Roy and Tao Sun and Yunzhe Tao and Brian Townsend and Eddie Calleja and Sunil Muralidhara and Dhanasekar Karuppasamy},
@@ -115,7 +122,7 @@
   booktitle = {2020 {IEEE} International Conference on Robotics and Automation ({ICRA})}
 }
 
-@article{Beal2013,
+@article{Beal2012,
   doi = {10.1109/tcst.2012.2200826},
   url = {https://doi.org/10.1109/tcst.2012.2200826},
   year = {2013},
@@ -959,6 +966,19 @@
   journal = {{IEEE} Transactions on Intelligent Vehicles}
 }
 
+@article{Herrmann2022,
+author={Herrmann, Thomas and Sauerbeck, Florian and Bayerlein, Maximilian and Betz, Johannes and Lienkamp, Markus},
+title={Optimization-Based Real-Time-Capable Energy Strategy for Autonomous Electric Race Cars [ SAEIndexTestSampleV2 2022-01-17T10:06:32.798262Z]},
+journal={SAE International Journal of Connected and Automated Vehicles},
+volume={5},
+number={1},
+month={jan},
+year={2022},
+doi={https://doi.org/10.4271/12-05-01-0005},
+issn={2574-0741},
+}
+
+
 
 @inproceedings{Hewing2018,
   doi = {10.23919/ecc.2018.8550162},
@@ -1215,6 +1235,17 @@
   journal = {Vehicle System Dynamics}
 }
 
+@inproceedings{Kessler2020,
+  doi = {10.1109/cdc42340.2020.9304495},
+  url = {https://doi.org/10.1109/cdc42340.2020.9304495},
+  year = {2020},
+  month = dec,
+  publisher = {{IEEE}},
+  author = {Tobias Kessler and Klemens Esterle and Alois Knoll},
+  title = {Linear Differential Games for Cooperative Behavior Planning of Autonomous Vehicles Using Mixed-Integer Programming},
+  booktitle = {2020 59th {IEEE} Conference on Decision and Control ({CDC})}
+}
+
 @article{Kloeser2020,
   doi = {10.1016/j.ifacol.2020.12.1376},
   url = {https://doi.org/10.1016/j.ifacol.2020.12.1376},
@@ -1458,6 +1489,18 @@
   booktitle = {{IEEE} Congress on Evolutionary Computation}
 }
 
+@article{Lovato2021,
+  doi = {10.1080/00423114.2021.1969024},
+  url = {https://doi.org/10.1080/00423114.2021.1969024},
+  year = {2021},
+  month = aug,
+  publisher = {Informa {UK} Limited},
+  pages = {1--18},
+  author = {S. Lovato and M. Massaro},
+  title = {Three-dimensional fixed-trajectory approaches to the minimum-lap time of road vehicles},
+  journal = {Vehicle System Dynamics}
+}
+
 @article{Mahmoud2020,
   doi = {10.1051/shsconf/20207704002},
   url = {https://doi.org/10.1051/shsconf/20207704002},
@@ -1499,6 +1542,20 @@
   journal = {Automatica}
 }
 
+@article{Montani2021,
+  doi = {10.3390/en14196008},
+  url = {https://doi.org/10.3390/en14196008},
+  year = {2021},
+  month = sep,
+  publisher = {{MDPI} {AG}},
+  volume = {14},
+  number = {19},
+  pages = {6008},
+  author = {Margherita Montani and Leandro Ronchi and Renzo Capitani and Claudio Annicchiarico},
+  title = {A Hierarchical Autonomous Driver for a Racing Car: Real-Time Planning and Tracking of the Trajectory},
+  journal = {Energies}
+}
+
 
 @misc{nekkah2020,
       title={The Autonomous Racing Software Stack of the KIT19d},
@@ -1509,8 +1566,6 @@
       note = {},
       primaryClass={cs.RO}
 }
-
-
 
 @inproceedings{Ni2017,
   doi = {10.1109/ivs.2017.7995972},
@@ -1593,7 +1648,8 @@
       note = {},
       primaryClass={cs.RO}
 }
-i see
+
+
 @InProceedings{okelly2019_2,
     title = {F1TENTH: An Open-source Evaluation Environment for Continuous Control and Reinforcement Learning},
     author = {O'Kelly, Matthew and Zheng, Hongrui and Karthik, Dhruv and Mangharam, Rahul},
@@ -1920,6 +1976,20 @@ i see
   booktitle = {Volume 3: Nonlinear Estimation and Control; Optimization and Optimal Control; Piezoelectric Actuation and Nanoscale Control; Robotics and Manipulators; Sensing; System Identification (Estimation for Automotive Applications, Modeling, Therapeutic Control in Bio-Systems); Variable Structure/Sliding-Mode Control; Vehicles and Human Robotics; Vehicle Dynamics and Control; Vehicle Path Planning and Collision Avoidance; Vibrational and Mechanical Systems; Wind Energy Systems and Control},
 }
 
+@article{Sauerbeck2022,
+author={Sauerbeck, Florian and Baierlein, Lucas and Betz, Johannes and Lienkamp, Markus},
+title={A Combined LiDAR-Camera Localization for Autonomous Race Cars [ SAEIndexTestSampleV2 2022-01-18T10:06:44.605496Z]},
+journal={SAE International Journal of Connected and Automated Vehicles},
+volume={5},
+number={1},
+month={jan},
+year={2022},
+doi={https://doi.org/10.4271/12-05-01-0006},
+url={https://doi.org/10.4271/12-05-01-0006},
+issn={2574-0741},
+}
+
+
 @misc{schwarting2021,
       title={Deep Latent Competition: Learning to Race Using Visual Control Policies in Latent Space},
       author={Wilko Schwarting and Tim Seyde and Igor Gilitschenski and Lucas Liebenwein and Ryan Sander and Sertac Karaman and Daniela Rus},
@@ -2110,6 +2180,13 @@ i see
   journal = {{IEEE} Transactions on Intelligent Vehicles}
 }
 
+@misc{Sukhil2021,
+Author = {Varundev Sukhil and Madhur Behl},
+Title = {Adaptive Lookahead Pure-Pursuit for Autonomous Racing},
+Year = {2021},
+Eprint = {arXiv:2111.08873},
+}
+
 @article{Talvala2011,
   doi = {10.1016/j.arcontrol.2011.03.009},
   url = {https://doi.org/10.1016/j.arcontrol.2011.03.009},
@@ -2124,7 +2201,7 @@ i see
   journal = {Annual Reviews in Control}
 }
 
-@article{TtuleaCodrean2020,
+@article{Tatulea2020,
   doi = {10.1016/j.ifacol.2020.12.1669},
   url = {https://doi.org/10.1016/j.ifacol.2020.12.1669},
   year = {2020},
@@ -2177,6 +2254,20 @@ i see
       archivePrefix={arXiv},
       note = {},
       primaryClass={cs.RO}
+}
+
+@article{Tramacere2021,
+  doi = {10.3390/app11167225},
+  url = {https://doi.org/10.3390/app11167225},
+  year = {2021},
+  month = aug,
+  publisher = {{MDPI} {AG}},
+  volume = {11},
+  number = {16},
+  pages = {7225},
+  author = {Eugenio Tramacere and Sara Luciani and Stefano Feraco and Angelo Bonfitto and Nicola Amati},
+  title = {Processor-in-the-Loop Architecture Design and Experimental Validation for an Autonomous Racing Vehicle},
+  journal = {Applied Sciences}
 }
 
 @inproceedings{Vallon2020,
@@ -2345,7 +2436,7 @@ i see
   booktitle = {2016 {IEEE} International Conference on Robotics and Automation ({ICRA})}
 }
 
-@misc{williams2017,
+@misc{Williams2017,
       title={Autonomous Racing with AutoRally Vehicles and Differential Games},
       author={Grady Williams and Brian Goldfain and Paul Drews and James M. Rehg and Evangelos A. Theodorou},
       year={2017},
@@ -2726,4 +2817,19 @@ pages	= {1271--1278}
   author={Brockman, Greg and Cheung, Vicki and Pettersson, Ludwig and Schneider, Jonas and Schulman, John and Tang, Jie and Zaremba, Wojciech},
   journal={arXiv preprint arXiv:1606.01540},
   year={2016}
+}
+
+@misc{FORCESPro,
+    Author = "Alexander Domahidi and Juan Jerez",
+    Howpublished = "Embotech AG, url=https://embotech.com/FORCES-Pro",
+    Title = "FORCES Professional",
+    Year = "2014--2019"
+}
+
+@article{World_Models,
+Author = {David Ha and Jürgen Schmidhuber},
+Title = {World Models},
+Year = {2018},
+Eprint = {arXiv:1803.10122},
+Doi = {10.5281/zenodo.1207631},
 }
