Change reference from ArXiv to IEEExplore

--- a/AutonomousRacing_Literature.bib
+++ b/AutonomousRacing_Literature.bib
@@ -573,23 +573,22 @@ Eprint = {arXiv:2110.01095},
   journal = {The International Journal of Electrical Engineering {\&} Education}
 }
 
-@misc{evans2021,
-      title={From Navigation to Racing: Reward Signal Design for Autonomous Racing},
-      author={Benjamin Evans and Herman A. Engelbrecht and Hendrik W. Jordaan},
-      year={2021},
-      eprint={2103.10098},
-      archivePrefix={arXiv},
-      note = {},
-      primaryClass={cs.RO}
+@inproceedings{evans2021,
+  title={Reward Signal Design for Autonomous Racing},
+  author={Evans, Benjamin and Engelbrecht, Herman A and Jordaan, Hendrik W},
+  booktitle={2021 20th International Conference on Advanced Robotics (ICAR)},
+  pages={455--460},
+  year={2021},
+  organization={IEEE}
 }
 
-@misc{evans2021_2,
-      title={Autonomous Obstacle Avoidance by Learning Policies for Reference Modification},
-      author={Benjamin Evans and Hendrik W. Jordaan and Herman A. Engelbrecht},
-      year={2021},
-      eprint={2102.11042},
-      archivePrefix={arXiv},
-      primaryClass={cs.RO}
+@inproceedings{evans2021_2,
+  title={Learning the Subsystem of Local Planning for Autonomous Racing},
+  author={Evans, Benjamin and Engelbrecht, Herman A and Jordaan, Hendrik W},
+  booktitle={2021 20th International Conference on Advanced Robotics (ICAR)},
+  pages={601--606},
+  year={2021},
+  organization={IEEE}
 }
 
 @article{Falanga2019,
