--- a/AutonomousRacing_Literature.bib
+++ b/AutonomousRacing_Literature.bib
@@ -11,6 +11,7 @@
   publisher={IEEE}
 }
 
+
 @inproceedings{Agnihotri2020,
   doi = {10.1145/3328778.3366796},
   url = {https://doi.org/10.1145/3328778.3366796},
@@ -35,7 +36,6 @@
   journal = {Control Engineering Practice}
 }
 
-
 @article{Alcal2020_2,
   doi = {10.1016/j.robot.2019.103392},
   url = {https://doi.org/10.1016/j.robot.2019.103392},
@@ -49,6 +49,26 @@
   journal = {Robotics and Autonomous Systems}
 }
 
+@inproceedings{Alrifaee2018,
+  doi = {10.1109/ivs.2018.8500634},
+  url = {https://doi.org/10.1109/ivs.2018.8500634},
+  year = {2018},
+  month = jun,
+  publisher = {{IEEE}},
+  author = {Bassam Alrifaee and Janis Maczijewski},
+  title = {Real-time Trajectory optimization for Autonomous Vehicle Racing using Sequential Linearization},
+  booktitle = {2018 {IEEE} Intelligent Vehicles Symposium ({IV})}
+}
+
+@article{Alrifaee2021,
+  doi = {10.36227/techrxiv.16635205.v1},
+  url = {https://doi.org/10.36227/techrxiv.16635205.v1},
+  year = {2021},
+  month = sep,
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Bassam Alrifaee and Patrick Scheffe and Maximilian Kloock and Theodor Mario Henneken},
+  title = {Sequential Convex Programming Methods for Real-time Trajectory Optimization in Autonomous Vehicle Racing}
+}
 
 @inproceedings{Anderson2016,
   doi = {10.1109/acc.2016.7525209},
@@ -573,22 +593,23 @@ Eprint = {arXiv:2110.01095},
   journal = {The International Journal of Electrical Engineering {\&} Education}
 }
 
-@inproceedings{evans2021,
-  title={Reward Signal Design for Autonomous Racing},
-  author={Evans, Benjamin and Engelbrecht, Herman A and Jordaan, Hendrik W},
-  booktitle={2021 20th International Conference on Advanced Robotics (ICAR)},
-  pages={455--460},
-  year={2021},
-  organization={IEEE}
+@misc{evans2021,
+      title={From Navigation to Racing: Reward Signal Design for Autonomous Racing},
+      author={Benjamin Evans and Herman A. Engelbrecht and Hendrik W. Jordaan},
+      year={2021},
+      eprint={2103.10098},
+      archivePrefix={arXiv},
+      note = {},
+      primaryClass={cs.RO}
 }
 
-@inproceedings{evans2021_2,
-  title={Learning the Subsystem of Local Planning for Autonomous Racing},
-  author={Evans, Benjamin and Engelbrecht, Herman A and Jordaan, Hendrik W},
-  booktitle={2021 20th International Conference on Advanced Robotics (ICAR)},
-  pages={601--606},
-  year={2021},
-  organization={IEEE}
+@misc{evans2021_2,
+      title={Autonomous Obstacle Avoidance by Learning Policies for Reference Modification},
+      author={Benjamin Evans and Hendrik W. Jordaan and Herman A. Engelbrecht},
+      year={2021},
+      eprint={2102.11042},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
 }
 
 @article{Falanga2019,
@@ -1052,7 +1073,6 @@ issn={2574-0741},
   author = {Maximilian Jaritz and Raoul de Charette and Marin Toromanoff and Etienne Perot and Fawzi Nashashibi},
   title = {End-to-End Race Driving with Deep Reinforcement Learning},
   booktitle = {2018 {IEEE} International Conference on Robotics and Automation ({ICRA})}
-
 }
 
  @inproceedings{Jeong2013,
@@ -1144,7 +1164,7 @@ issn={2574-0741},
   journal = {Journal of Field Robotics}
 }
 
-  @article{Kapania2015,
+@article{Kapania2015,
   doi = {10.1080/00423114.2015.1055279},
   url = {https://doi.org/10.1080/00423114.2015.1055279},
   year = {2015},
@@ -1336,7 +1356,7 @@ issn={2574-0741},
 }
 
 @inproceedings{Laurense2018,
-  url = {https://ddl.stanford.edu/publications/speed-control-robust-path-tracking-automated-vehicles-tire-road-friction-limit},
+  url = {https://ddl.stanford.edu/publications/speed-control-robust-path-tracking-automated-vehicles-tire-road/-friction-limit},
   year = {2018},
   author = {Vincent Laurense and Christian Gerdes},
   title = {Speed Control for Robust Path-Tracking for Automated Vehicles at the Tire-Road Friction Limit},
@@ -1826,6 +1846,19 @@ issn={2574-0741},
   author = {Jan Quadflieg and Mike Preuss and G\"{u}nter Rudolph},
   title = {Driving Faster Than a Human Player},
   booktitle = {Applications of Evolutionary Computation}
+}
+
+@article{Reiter2021,
+  doi = {10.1016/j.ifacol.2021.08.530},
+  url = {https://doi.org/10.1016/j.ifacol.2021.08.530},
+  year = {2021},
+  publisher = {Elsevier {BV}},
+  volume = {54},
+  number = {6},
+  pages = {99--106},
+  author = {Rudolf Reiter and Martin Kirchengast and Daniel Watzenig and Moritz Diehl},
+  title = {Mixed-integer optimization-based planning for autonomous racing with obstacles and rewards},
+  journal = {{IFAC}-{PapersOnLine}}
 }
 
  @article{Remonda2019,
@@ -2548,6 +2581,13 @@ Eprint = {arXiv:2111.08873},
   journal = {Vehicle System Dynamics}
 }
 
+@misc{Wischnewski2022,
+Author = {Alexander Wischnewski and Maximilian Geisslinger and Johannes Betz and Tobias Betz and Felix Fent and Alexander Heilmeier and Leonhard Hermansdorfer and Thomas Herrmann and Sebastian Huch and Phillip Karle and Felix Nobis and Levent Ögretmen and Matthias Rowold and Florian Sauerbeck and Tim Stahl and Rainer Trauth and Markus Lienkamp and Boris Lohmann},
+Title = {Indy Autonomous Challenge -- Autonomous Race Cars at the Handling Limits},
+Year = {2022},
+Eprint = {arXiv:2202.03807},
+}
+
 @inproceedings{You2017,
   doi = {10.23919/acc.2017.7962973},
   url = {https://doi.org/10.23919/acc.2017.7962973},
@@ -2598,7 +2638,7 @@ Eprint = {arXiv:2111.08873},
 @misc{Zeilinger2017,
   doi = {10.3217/978-3-85125-524-9-10},
   url = {https://openlib.tugraz.at/download.php?id=5aaa45931188a&location=medra},
-  author = {{Zeilinger,  Marcel} and {Hauk,  Raphael} and {Bader,  Markus} and {Hofmann,  Alexander}},
+  author = {Marcel Zeillinger and Raphael Hauk and  Markus Bader and  Alexander Hofmann},
   title = {Design of an Autonomous Race Car for the Formula Student Driverless (FSD)},
   publisher = {Verlag der Technischen Universit\"{a}t Graz},
   year = {2017}
