Update .bib content

--- a/AutonomousRacing_Literature.bib
+++ b/AutonomousRacing_Literature.bib
@@ -2740,13 +2740,18 @@ Vehicles From Standstill to the Limits of Handling},
 }
 
 
-@inproceedings{ICRAworkshop_07,
-  url = {https://linklab-uva.github.io/icra-autonomous-racing/contributed_papers/paper7.pdf},
+@article{ICRAworkshop_07,
+  doi = {10.1109/lra.2021.3090023},
+  url = {https://doi.org/10.1109/lra.2021.3090023},
   year = {2021},
-  publisher = {{IEEE}},
+  month = jul,
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {6},
+  number = {3},
+  pages = {6054--6060},
   author = {Xuesu Xiao and Joydeep Biswas and Peter Stone},
-  title = {Learning Inverse Kinodynamics for Accurate High-Speed Off-Road Navigation on Unstructured Terrain },
-  booktitle = {2021 International Conference on Robotics and Automation (ICRA 2021) - Workshop Opportunities and Challenges With Autonomous Racing}
+  title = {Learning Inverse Kinodynamics for Accurate High-Speed Off-Road Navigation on Unstructured Terrain},
+  journal = {{IEEE} Robotics and Automation Letters}
 }
 
 @inproceedings{ICRAworkshop_08,
