small .bib update

--- a/AutonomousRacing_Literature.bib
+++ b/AutonomousRacing_Literature.bib
@@ -2689,7 +2689,7 @@ Vehicles From Standstill to the Limits of Handling},
 
 
 
-@comment{-------------------- ICRA WORKSHOP LITERATURE -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------}
+@comment{-------------------- ICRA WORKSHOP 2021 LITERATURE -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------}
 
 
 
@@ -2810,70 +2810,4 @@ Vehicles From Standstill to the Limits of Handling},
 
 
 
-@comment{-------------------- Additional Literature  -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------}
-
-@Article{pendlton2017,
-    AUTHOR = {Pendleton, Scott Drew and Andersen, Hans and Du, Xinxin and Shen, Xiaotong and Meghjani, Malika and Eng, You Hong and Rus, Daniela and Ang, Marcelo H.},
-    TITLE = {Perception, Planning, Control, and Coordination for Autonomous Vehicles},
-    JOURNAL = {Machines},
-    VOLUME = {5},
-    YEAR = {2017},
-    NUMBER = {1},
-    ARTICLE-NUMBER = {6},
-    URL = {https://www.mdpi.com/2075-1702/5/1/6},
-    ISSN = {2075-1702},
-    DOI = {10.3390/machines5010006}
-}
-
-@inproceedings{Cartographer2016,
-title	= {Real-Time Loop Closure in 2D LIDAR SLAM},
-author	= {Wolfgang Hess and Damon Kohler and Holger Rapp and Daniel Andor},
-year	= {2016},
-booktitle	= {2016 IEEE International Conference on Robotics and Automation (ICRA)},
-pages	= {1271--1278}
-}
-
-@misc{Torcs2005,
-  title={TORCS, The Open Racing Car Simulator},
-  author={E. Espi{\'e} and Christophe Guionneau and Bernhard Wymann and Christos Dimitrakakis and R{\'e}mi Coulom and Andrew Sumner},
-  year={2005}
-}
-
-@book{Potz2017,
-  doi = {10.1007/978-3-658-16102-6},
-  url = {https://doi.org/10.1007/978-3-658-16102-6},
-  year = {2017},
-  publisher = {Springer Fachmedien Wiesbaden},
-  author = {Ralph P\"{u}tz and Ton Sern{\'{e}}},
-  title = {Rennwagentechnik - Praxislehrgang Fahrdynamik}
-}
-
-@inproceedings{Carla17,
-  title = {{CARLA}: {An} Open Urban Driving Simulator},
-  author = {Alexey Dosovitskiy and German Ros and Felipe Codevilla and Antonio Lopez and Vladlen Koltun},
-  booktitle = {Proceedings of the 1st Annual Conference on Robot Learning},
-  pages = {1--16},
-  year = {2017}
-}
-
-@article{openAI2016,
-  title={Openai gym},
-  author={Brockman, Greg and Cheung, Vicki and Pettersson, Ludwig and Schneider, Jonas and Schulman, John and Tang, Jie and Zaremba, Wojciech},
-  journal={arXiv preprint arXiv:1606.01540},
-  year={2016}
-}
-
-@misc{FORCESPro,
-    Author = "Alexander Domahidi and Juan Jerez",
-    Howpublished = "Embotech AG, url=https://embotech.com/FORCES-Pro",
-    Title = "FORCES Professional",
-    Year = "2014--2019"
-}
-
-@article{World_Models,
-Author = {David Ha and Jürgen Schmidhuber},
-Title = {World Models},
-Year = {2018},
-Eprint = {arXiv:1803.10122},
-Doi = {10.5281/zenodo.1207631},
-}
+@comment{-------------------- ICRA WORKSHOP 2022 LITERATURE -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------}
