--- a/AutonomousRacing_Literature.bib
+++ b/AutonomousRacing_Literature.bib
@@ -1,5 +1,16 @@
 @comment{-------------------- RACING LITERATURE -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------}
 
+@eprint{samak2021,
+  doi = {10.48550/ARXIV.2110.05437},
+  url = {https://arxiv.org/abs/2110.05437},
+  author = {Samak, Chinmay Vilas and Samak, Tanmay Vilas and Kandhasamy, Sivanathan},
+  keywords = {Robotics (cs.RO), Artificial Intelligence (cs.AI), Machine Learning (cs.LG), Neural and Evolutionary Computing (cs.NE), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Autonomous Racing using a Hybrid Imitation-Reinforcement Learning Architecture},
+  publisher = {arXiv},
+  year = {2021},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
 @article{bristow2006survey,
   title={A survey of iterative learning control},
   author={Bristow, Douglas A and Tharayil, Marina and Alleyne, Andrew G},
@@ -10,7 +21,6 @@
   year={2006},
   publisher={IEEE}
 }
-
 
 @inproceedings{Agnihotri2020,
   doi = {10.1145/3328778.3366796},
